Fixed: Search Form > Responsive Search Label Styles and Missing Category Label Spacing , Filter button , Input ellipsis (#2157)
* Fixed: Responsive label font size issue by overriding third-party plugin styles

* Fixed:Missing Category Label

* remove short space

* adjust space

* remove extra js

* fixed: Modal Button > Hover Icon color issue

* rename class name and adjust css

* fixed filter cursor and Fixed input input ellipsis

--- a/assets/src/scss/component/_modal.scss
+++ b/assets/src/scss/component/_modal.scss
@@ -478,7 +478,7 @@
       color: var(--directorist-color-white);
       background-color: var(--directorist-color-primary);
       i::after {
-        background-color: var(--directorist-color-white);
+        background-color: currentColor;
       }
     }
     @media screen and (max-width: 575px) {
@@ -529,10 +529,10 @@
             }
           }
 
-          &.input-is-focused {
+          &.input-is-focused:not(.input-has-noLabel) {
             margin: 0 40px;
             .directorist-search-field__label {
-              font-size: 0;
+              font-size: 0 !important;
               top: 50%;
               transform: translateY(-50%);
               left: -25px;
@@ -580,7 +580,7 @@
           &.input-has-value:not(.input-is-focused) {
             .directorist-search-field__label {
               opacity: 0;
-              font-size: 0;
+              font-size: 0 !important;
             }
             .directorist-search-field__input::placeholder {
               opacity: 0;
