--- a/assets/src/scss/component/_search-home.scss
+++ b/assets/src/scss/component/_search-home.scss
@@ -364,6 +364,10 @@
         @media screen and (max-width: 575px) {
           border: 0 none;
           border-radius: 0;
+          overflow: hidden;
+          -o-text-overflow: ellipsis;
+          -ms-text-overflow: ellipsis;
+          text-overflow: ellipsis;
         }
       }
 
@@ -467,6 +471,14 @@
         &.input-is-focused {
           padding: 0;
           margin: 0 40px;
+          &.input-has-noLabel{
+            @media screen and (max-width: 575px) {
+              margin: 0 20px;
+              .directorist-search-field__btn{
+                right: 0;
+              }
+            }
+          }
           .directorist-search-field__input {
             bottom: 0;
             &::placeholder {
@@ -474,7 +486,7 @@
             }
           }
           .directorist-search-field__label {
-            font-size: 0;
+            font-size: 0 !important;
             top: 50%;
             transform: translateY(-50%);
             left: -25px;
@@ -525,7 +537,7 @@
           &:not(.input-is-focused) {
             .directorist-search-field__label {
               opacity: 0;
-              font-size: 0;
+              font-size: 0 !important;
             }
             .directorist-search-field__input::placeholder {
               opacity: 0;
